# chempanion

./: LICENSE  README.md  gitignore  pyproject.toml
src/ccm/: cli.py
src/ccm/mdeq/: cli.py  ensemble.py  main.py
src/ccm/vscan/: cli.py  main.py
src/cmp/: cli.py  utils.py
src/cmp/db/: cli.py  evaluator_utils.py  main.py  utils.py
src/cmp/mdeq/: cli.py  ensemble.py  main.py
src/cmp/vscan/: cli.py  main.py
src/mdeq/: ensemble.py  main.py  parser.py  temp.py  utils.py
test/: argon_start.xyz  db.xyz  ec_emc.xyz  lol.xyz  run.sh
