[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "chempanion"
dynamic = ["version"]
authors = [
  { name="Viktor Svahn", email="svahnv@gmail.com" },
]
description =   "Create and equilibrate atomic structures for simulation using ase."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'numpy',
    'ase',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/viktorsvahn/mdeq/"
Issues = "https://github.com/viktorsvahn/mdeq/issues"

[project.scripts]
cmp = 'cmp.cli:main'